tests/spec/emit/snapshots/fmt_println_still_collapses_explicit_sprintf.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn test(x: int) {
    fmt.Println(fmt.Sprintf("%d", x))
  }
---
package main

import "fmt"

func test(x int) {
	fmt.Printf("%d\n", x)
}
