tests/spec/emit/snapshots/fmt_println_still_collapses_single_arg_sprint.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nimport \"go:fmt\"\n\nfn test(x: int) {\n  fmt.Println(fmt.Sprint(x))\n}\n"
---
package main

import "fmt"

func test(x int) {
	fmt.Println(x)
}
