tests/spec/emit/snapshots/fmt_println_string_only_format_string_prints_concatenation.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let name = "Ada"
    fmt.Println(f"Hello {name}")
  }
---
package main

import "fmt"

func main() {
	name := "Ada"
	fmt.Println("Hello " + name)
}
