tests/spec/emit/snapshots/for_bytes_loop_captures_mutated_receiver.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn main() {
    let mut s = "ab"
    let mut count = 0
    for b in s.bytes() {
      count += 1
      s = ""
      let _ = b
    }
    if count != 2 {
      panic("expected count 2 — bytes loop must iterate over the original string")
    }
  }
---
package main

func main() {
	s := "ab"
	count := 0
	s_1 := s
	for i := 0; i < len(s_1); i++ {
		count++
		s = ""
	}
	if count != 2 {
		panic("expected count 2 — bytes loop must iterate over the original string")
	}
}
