tests/spec/emit/snapshots/for_bytes_zero_alloc.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  import "go:fmt"
  fn test(s: string) {
    for b in s.bytes() {
      fmt.Println(b)
    }
  }
---
package main

import "fmt"

func test(s string) {
	for i := 0; i < len(s); i++ {
		b := s[i]
		fmt.Println(b)
	}
}
