tests/spec/emit/snapshots/for_complex_pattern_unused_item.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct P { v: int }
  fn test() {
    for P { v } in [P { v: 1 }] {
      ()
    }
  }
---
package main

type P struct {
	v int
}

func test() {
	for _, item := range []P{{v: 1}} {
		_ = item
	}
}
