tests/spec/emit/snapshots/for_enumerate_complex_all_unused.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    let items = [(1,2), (3,4)]
    for (i, (a, b)) in items.enumerate() {
      ()
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	items := []lisette.Tuple2[int, int]{
		lisette.MakeTuple2[int, int](1, 2),
		lisette.MakeTuple2[int, int](3, 4),
	}
	for key, value := range items {
		_ = value
		_ = key
	}
}
