tests/spec/emit/snapshots/for_loop.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(items: Slice<int>) -> int {
    let mut sum = 0;
    for item in items {
      sum = sum + item;
    };
    sum
  }
---
package main

func test(items []int) int {
	sum := 0
	for _, item := range items {
		sum += item
	}
	return sum
}
